--- a/mqtt-dynamic.html
+++ b/mqtt-dynamic.html
@@ -26,7 +26,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="mqtt-dynamic in">
-    <p>MQTT dynamic input node. Connects to a broker and subscribes to the topic specified in <b>msg.topic</b>. The topic may contain MQTT wildcards.</p>
+    <p>MQTT dynamic topic input node. Connects to a broker and subscribes to the topic specified in <b>msg.topic</b>. The topic may contain MQTT wildcards.</p>
     <p>Outputs an object called <b>msg</b> containing <b>msg.topic, msg.payload, msg.qos</b> and <b>msg.retain</b>.</p>
     <p><b>msg.payload</b> is usually a string, but can also be a binary buffer.</p>
 </script>
@@ -43,7 +43,7 @@
         outputs:1,
         icon: "bridge.png",
         label: function() {
-            return this.name||"mqtt-dynamic";
+            return this.name||"mqtt-dynamictopic";
         },
         labelStyle: function() {
             return this.name?"node_label_italic":"";
